# sipXhomer

./: .classpath  .gitignore  .project  Makefile.am  README  configure.ac  sipxhomer.spec.in
config-plugin/: Makefile.am  Makefile.in  sipxhomer-plugin.properties  sipxplugin.beans.xml
config-plugin/plugin/: HomerHook.html  HomerHook.page  HomerHook.properties  HomerPage.html  HomerPage.page  HomerPage.properties
config-plugin/src/org/sipfoundry/sipxconfig/homer/: Homer.java  HomerConfig.java  HomerDbManager.java  HomerImpl.java  HomerSettings.java
config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: HomerHook.java  HomerPage.java
etc/: Makefile.am  homer.cf  mysql.cf  sipxhomer.properties  sipxhomer.xml
include/: BlockingQueue.h  HEPCaptureAgent.h  HEPTestDriver.h  Makefile.am  OsLogger.h  Semaphore.h  ServiceOptions.h  StateQueueClient.h  TimedMap.h  TimedQueue.h  UnitTest.h  sqaclient.h
include/sipxhomer/: HEPCaptureAgent.h  HEPDao.h  HEPMessage.h  HEPTestDriver.h  HomerDao.h
proxy-plugin/: Makefile.am  ProxyPlugin.cpp  ProxyPlugin.h
src/: HEPCaptureAgent.cpp  HEPDao.cpp  HEPDaoTest.cpp  HEPTestDriver.cpp  HomerDao.cpp  HomerDao.h  HomerMain.cpp  Makefile.am  Makefile.jeb  config.h.in  main.cpp
webhomer-auth/: Makefile.am  auth.php  settings.php  settings.php.in
